# tooling

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
src/openauthcert_tooling/: __init__.py  __main__.py  validate_badge.py  validate_vendor.py
tests/: test_validate_badge_cli.py  test_validate_vendor.py
