[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openauthcert-tooling"
version = "0.1.0"
description = "Validation tools for Open Authentication Certification Initiative"
authors = [
  { name = "OpenAuthCert Foundation", email = "contact@openauthcert.org" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "check-jsonschema"
]

[project.scripts]
tooling = "openauthcert_tooling.__main__:main"
